<resources>
    <string name="app_name">Chancita</string>
    <string name="registrarse">Crear cuenta</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="contraseña">Contraseña</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="apellido_completo">Apellido completo</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="numero_de_celular">Número de celular</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="nombre_y_apellido">Nombre y apellido</string>
    <string name="editar_datos">Editar datos</string>
    <string name="edad">Edad</string>
    <string name="olvidaste_tu_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="mantener_sesion_iniciada">Mantener sesión iniciada</string>
    <string name="continuar">Continuar</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="repetir_contraseña">Repetir contraseña</string>
    <string name="logo_mercado_pago">Logo Mercado Pago</string>
    <string name="crear_rifa_paso_1_descripcion_1">Para que puedas recibir el dinero de tus rifas de manera directa y segura, necesitamos que vincules tu cuenta de Mercado Pago.</string>
    <string name="crear_rifa_paso_2_descripcion_2">Si ya tienes una cuenta, inicia sesión. Si no, puedes crear una nueva cuenta en muy pocos minutos.</string>
    <string name="hora_de_sorteo">Hora de sorteo</string>
    <string name="fecha_de_sorteo">Fecha de sorteo</string>
    <string name="cant_de_numeros_max_200">Cant. de números (min.2, máx. 200)</string>
    <string name="precio">Precio</string>
    <string name="cant_de_premios_min_1">Cant. de premios (mín. 1, máx. 10)</string>
    <string name="descripcion_opcional">Descripción (opcional)</string>
    <string name="titulo">Título</string>
    <string name="ingresa_informacion_de_la_rifa_que_quieres_crear">Ingresa información de la rifa que quieres crear</string>
    <string name="ingresa_informacion_de_los_premios">Ingresa información de los premios</string>
    <string name="descripcion_de_la_rifa">Descripción de la rifa</string>
    <string name="crear_rifa_paso_5_ejemplo">Por ej.: Tómbola del día 27/7/2025</string>
    <string name="crear_rifa_paso_5_titulo">Escribe una breve y concisa descripción de cómo escogerás los números ganadores.</string>
    <string name="editar_datos_de_la_rifa">Editar datos de la rifa</string>
    <string name="restablecer_contraseña">Restablecer contraseña</string>
    <string name="confirmar_contraseña">Confirmar contraseña</string>
    <string name="cargando">Cargando...</string>
    <string name="no_tienes_notificaciones">No tienes notificaciones</string>
    <string name="editar_rifa">Editar rifa</string>
    <string name="codigo">Código</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>