<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.perfil.PerfilFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_y_apellido"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface" />

            <TextView
                android:id="@+id/perfil_txt_nombre_completo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/cargando"
                android:textSize="18sp"
                android:textColor="?attr/colorOnSurface" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/edad"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"  />

            <TextView
                android:id="@+id/perfil_txt_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/cargando"
                android:textSize="18sp"
                android:textColor="?attr/colorOnSurface" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/correo_electronico"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"  />

            <TextView
                android:id="@+id/perfil_txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/cargando"
                android:textSize="18sp"
                android:textColor="?attr/colorOnSurface" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/numero_de_celular"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"  />

            <TextView
                android:id="@+id/perfil_txt_celular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/cargando"
                android:textSize="18sp"
                android:textColor="?attr/colorOnSurface" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/perfil_btn_editar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="32dp"
                android:text="@string/editar_datos"
                android:textSize="18sp"
                app:cornerRadius="28dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>