<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.crear_cuenta.CrearCuentaFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/registrarse_txt_titulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/registrarse"
                android:textColor="?attr/colorOnSurface"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registrarse_til_nombre_completo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/nombre_completo"
                app:boxStrokeColor="@color/text_input_selector"
                app:hintTextColor="@color/text_input_selector"
                app:layout_constraintTop_toBottomOf="@id/registrarse_txt_titulo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrarse_et_nombre_completo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registrarse_til_apellido_completo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/apellido_completo"
                app:boxStrokeColor="@color/text_input_selector"
                app:hintTextColor="@color/text_input_selector"
                app:layout_constraintTop_toBottomOf="@id/registrarse_til_nombre_completo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrarse_et_apellido_completo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registrarse_til_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/correo_electronico"
                app:boxStrokeColor="@color/text_input_selector"
                app:hintTextColor="@color/text_input_selector"
                app:layout_constraintTop_toBottomOf="@id/registrarse_til_apellido_completo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrarse_tiet_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registrarse_til_fecha_nacimiento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/fecha_de_nacimiento"
                app:boxStrokeColor="@color/text_input_selector"
                app:hintTextColor="@color/text_input_selector"
                app:endIconMode="custom"
                app:endIconDrawable="@android:drawable/ic_menu_my_calendar"
                app:layout_constraintTop_toBottomOf="@id/registrarse_til_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrarse_et_fecha_nacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registrarse_til_nro_celular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/numero_de_celular"
                app:boxStrokeColor="@color/text_input_selector"
                app:hintTextColor="@color/text_input_selector"
                app:layout_constraintTop_toBottomOf="@id/registrarse_til_fecha_nacimiento"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrarse_et_nro_celular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:id="@+id/registrarse_til_contraseña"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/contraseña"
                app:boxStrokeColor="@color/text_input_selector"
                app:hintTextColor="@color/text_input_selector"
                app:passwordToggleTint="?attr/colorOnSurface"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/registrarse_til_nro_celular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registarse_tiet_contraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registrarse_til_confirmar_contraseña"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/repetir_contraseña"
                app:boxStrokeColor="@color/text_input_selector"
                app:hintTextColor="@color/text_input_selector"
                app:passwordToggleTint="?attr/colorOnSurface"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/registrarse_til_contraseña"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrarse_et_confirmar_contraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registrarse_btn_continuar"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:text="@string/continuar"
                android:textSize="18sp"
                app:cornerRadius="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>